# Solidworks-2026-skill

./: .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_checkpoints/: INDEX.md  v0.4-2026-06-13-plan-final.md
mcp/: server.py
references/: allowed-apis.md  assembly-design-ledger.md  assembly.md  com-api-table.md  com-patterns.md  connect.md  index.md  parent-imports.md  part-modeling.md  selector-reference-system.md  snapshot-review.md  step-parts-integration.md  sw-brief.md  troubleshooting.md  verification.md
references/upstream/: README.md  (+2 more)
scripts/: __init__.py  sw_mate.py  sw_motion.py  sw_review.py  sw_verify.py
solidworks_2026_skill/: __init__.py  _com_helpers.py  _com_signatures.py  _compat.py  sw_assembly.py  sw_check_interfaces.py  sw_connect.py  sw_export.py  sw_mate.py  sw_part.py  sw_preflight.py  sw_selector_refs.py  sw_session.py  sw_snapshot.py  sw_step_parts.py  sw_verify.py
sw_2026_skill/: __init__.py  sw_assembly.py  sw_check_interfaces.py  sw_connect.py  sw_export.py  sw_mate.py  sw_part.py  sw_selector_refs.py  sw_session.py  sw_snapshot.py  sw_step_parts.py  sw_verify.py
tests/: artifact.md  conftest.py  requirements.md  results_l1_l3.txt  test_independence.py  test_l1_l3.py  test_selector_refs.py  test_sw_check_interfaces.py  test_sw_macro_guard.py  test_sw_preflight.py  test_sw_verify.py  test_syntax.py
(+12 files in other folders)
