[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sw-2026-skill"
version = "1.0.0"
description = "SolidWorks 2026 Python COM automation — part modeling, assembly, mates, verification & export"
requires-python = ">=3.10"
dependencies = ["pywin32>=305"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
sw-mcp = "mcp.server:main"

[tool.setuptools.packages.find]
include = ["sw_2026_skill*"]
